added launch.json for streamlit app run call

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,8 +9,8 @@
             "type": "python",
             "request": "launch",
             "module": "streamlit",
-            "args": ["run", "${file}"],
-            "justMyCode": true
+            "justMyCode": true,
+            "args": ["run", "${file}"]
         }
     ]
 }
