--- a/requirements.txt
+++ b/requirements.txt
@@ -1,185 +1,11 @@
-absl-py==0.15.0
-aiohttp==3.8.1
-aiosignal==1.2.0
-altair==4.2.0
-argon2-cffi==21.3.0
-argon2-cffi-bindings==21.2.0
-asttokens==2.0.5
-async-timeout==4.0.1
-attrs==21.4.0
-backcall==0.2.0
-beautifulsoup4==4.11.1
-bleach==4.1.0
-blinker==1.4
-blis==0.7.8
-boto3==1.24.74
-botocore==1.27.74
-Bottleneck==1.3.5
-brotlipy==0.7.0
-cachetools==4.2.2
-catalogue==2.0.8
-certifi==2022.9.14
-cffi==1.15.1
-charset-normalizer==2.0.4
-click==8.0.4
-colorama==0.4.5
-commonmark==0.9.1
-conda==4.14.0
-conda-package-handling==1.8.1
-cryptography==37.0.1
-cymem==2.0.6
-debugpy==1.5.1
-decorator==5.1.1
-defusedxml==0.7.1
-en-core-web-sm==3.4.0
-entrypoints==0.4
-executing==0.8.3
-fastjsonschema==2.16.2
-filelock==3.8.0
-frozenlist==1.2.0
-fsspec==2022.7.1
-gitdb==4.0.9
-GitPython==3.1.27
-google-auth==2.6.0
-google-auth-oauthlib==0.4.4
-grpcio==1.42.0
-htbuilder==0.6.0
-huggingface-hub==0.9.1
-idna==3.3
-importlib-metadata==4.11.3
-ipykernel==6.15.3
-ipython==8.4.0
-ipython-genutils==0.2.0
-ipywidgets==7.6.5
-iteration-utilities==0.11.0
-jedi==0.18.1
-Jinja2==3.0.3
-jmespath==1.0.1
-joblib==1.2.0
-jsonschema==4.4.0
-jupyter==1.0.0
-jupyter_client==7.3.5
-jupyter-console==6.4.3
-jupyter-core==4.10.0
-jupyterlab-pygments==0.1.2
-jupyterlab-widgets==1.0.0
-langcodes==3.3.0
-libmambapy==0.25.0
-mamba==0.25.0
-Markdown==3.3.4
-MarkupSafe==2.1.1
-matplotlib-inline==0.1.6
-mistune==0.8.4
-mkl-fft==1.3.1
-mkl-random==1.2.2
-mkl-service==2.4.0
-multidict==5.2.0
-murmurhash==1.0.8
-nbclient==0.5.13
-nbconvert==6.4.4
-nbformat==5.3.0
-nest-asyncio==1.5.5
 networkx==2.8.6
-notebook==6.4.12
-numexpr==2.8.3
-numpy==1.23.1
-oauthlib==3.2.0
-packaging==21.3
 pandas==1.4.3
-pandocfilters==1.5.0
-parso==0.8.3
-pathy==0.6.2
-pexpect==4.8.0
-pickleshare==0.7.5
-Pillow==9.2.0
-pip==22.1.2
-ply==3.11
-preshed==3.0.7
-prometheus-client==0.14.1
-prompt-toolkit==3.0.20
-protobuf==3.20.1
-psutil==5.9.0
-ptyprocess==0.7.0
-pure-eval==0.2.2
-pyarrow==9.0.0
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycosat==0.6.3
-pycparser==2.21
-pydantic==1.9.2
-pydeck==0.8.0b3
-pyDeprecate==0.3.2
-Pygments==2.11.2
-PyJWT==2.4.0
-Pympler==1.0.1
-pyOpenSSL==22.0.0
-pyparsing==3.0.9
-PyQt5-sip==12.11.0
-pyrsistent==0.18.0
-PySocks==1.7.1
-python-dateutil==2.8.2
 pytorch-lightning==1.7.6
 pytorch-transformers==1.2.0
-pytz==2022.2.1
-pytz-deprecation-shim==0.1.0.post0
-PyYAML==6.0
-pyzmq==23.2.0
-qtconsole==5.3.2
-QtPy==2.2.0
-regex==2022.9.13
-requests==2.28.1
-requests-oauthlib==1.3.0
-rich==12.5.1
-rsa==4.7.2
-ruamel-yaml-conda==0.15.80
-s3transfer==0.6.0
-sacremoses==0.0.53
-semver==2.13.0
-Send2Trash==1.8.0
-sentencepiece==0.1.97
-setuptools==63.4.1
-shellingham==1.5.0
-sip==6.6.2
-six==1.16.0
-smart-open==5.2.1
-smmap==5.0.0
-soupsieve==2.3.1
-spacy==3.4.1
-spacy-legacy==3.0.10
-spacy-loggers==1.0.3
-srsly==2.4.4
-st-annotated-text==3.0.0
-stack-data==0.2.0
-streamlit==1.12.2
-tensorboard==2.10.0
-tensorboard-data-server==0.6.0
-tensorboard-plugin-wit==1.8.1
-terminado==0.13.1
-testpath==0.6.0
-thinc==8.1.0
-tokenizers==0.12.1
-toml==0.10.2
-toolz==0.12.0
 torch==1.12.1
-torchaudio==0.12.1
 torchmetrics==0.9.3
-torchvision==0.13.1
-tornado==6.2
-tqdm==4.64.0
-traitlets==5.1.1
 transformers==4.22.0
-typer==0.4.2
-typing_extensions==4.3.0
-tzdata==2022.2
-tzlocal==4.2
-urllib3==1.26.11
-validators==0.20.0
-wasabi==0.10.0
-watchdog==2.1.9
-wcwidth==0.2.5
-webencodings==0.5.1
-Werkzeug==2.0.3
-wheel==0.37.1
-widgetsnbextension==3.5.2
-yarl==1.8.1
-zipp==3.8.0
+transformers-interpret
+spacy==3.4.1
+st-annotated-text==3.0.0
+streamlit==1.12.2
